Sun Sep  7 17:35:27 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* strdup.c: Removed, per change to ../configure.in
	* Makefile.in (SOURCES): Remove strdup.c.

Mon Jun 16 18:59:50 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* system.h: Add CVS_FNMATCH.

Sun Jun  8 23:41:11 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* system.h (mkfifo): Remove; not used anywhere.

Thu Mar  6 17:14:49 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* regex.c: Partial merge with version from emacs 19.34.  I brought
	over most trivial changes (whitespace and so on).  Most of the
	changes to portability cruft I did not bring over, on the theory
	of sticking to the devil that we know.  I did bring over the
	change to undef MAX and MIN (this is a better solution to a
	problem we had been handling a different way).  There were a
	variety of changes I probably could/should have brought over, but
	elected not to try to understand them and whether they would cause
	trouble (printchar -> putchar, changes to output format in
	print_partial_compiled_pattern, internationalization,
	FREE_STACK_RETURN and friends which would appear to be fixing
	memory leaks in error cases, RE_TRANSLATE_TYPE, and others).  I
	did merge the changes (union fail_stack_elt, PUSH_FAILURE_POINTER,
	etc.) to use a union for the failure stack rather than playing
	games with pointers and integers (that was my reason for
	bothering; the code had been broken on the Alpha).

Mon Feb 10 18:52:18 1997  Ullrich von Bassewitz <uz@musoftware.com>

	* md5.c: Make the parameter to getu32 const since the function will
        only read the values and this will avoid compiler warnings in other
        places.

Mon Feb 10 18:29:04 1997  Ullrich von Bassewitz <uz@musoftware.com>

	* vasprintf.c: Added a #define for systems where a va_list is
	defined as an array, not as a pointer.

Mon Feb 10 09:31:38 1997  Ken Raeburn  <raeburn@cygnus.com>

	* md5.c (MD5STEP): Truncate to 32 bits before shifting right.
